# GenSQL.structure-learning

./: .envrc  .gitignore  Dockerfile  Dockerfile.more  Makefile  README.md  build-db.sh  build.edn  configuration.nix  connect.sh  deps.edn  devbox.json  devenv.nix  devenv.yaml  devshell.nix  download.sh  dvc-cgpm.yaml  dvc-clojurecat.yaml  dvc-loom.yaml  dvc-no-loom.yaml  dvc-stream-mi.yaml  dvc-stream.yaml  dvc.nix  dvc.yaml  flake.nix  inferenceql.publish-5202f71-DIRTY.jar.dvc  inferenceql.publish-8abacdc-DIRTY.jar.dvc  inspect-cgpm.ipynb  iql.publish  lz-compress.js  main.tf  package.json  params-stream.yaml  params.yaml  pnpm-lock.yaml  pyproject.toml  query-models.adoc  requirements.osx.txt  requirements.txt  schema.edn  (+6 more)
.clj-kondo/: config.edn
.dvc/: config
.github/workflows/: clojure-lint.yaml  clojure-tests.yaml  commit-linter.yaml  dvc-repro-satellites.yaml  python-build-tests.yaml  python-lint.yaml  python-tests.yaml  python-unit-tests.yaml  smoke-test-stream.yaml  smoke-test.yaml  tests.yaml
baselines/: pyproject.toml  train_baseline.py
data/: .gitignore  cgpm-schema.edn  cumulative_2006-2022.dta.dvc  data.csv  data.csv.dvc  db.edn  endocrine_outcome.csv  expert_yhat_endocrine.npy  ground_truth_endocrine.npy  loom-schema.json  lpm_yhat_endocrine.npy  mapping-table.edn  naive_yhat_endocrine.npy  prob_vote_2016_query.csv  prob_vote_2016_query.json  religious-asians.csv  schema.edn  synthetic-data-copula.csv  synthetic-data-gan.csv
data/fidelity/: .gitignore
data/raw/: .gitignore  CES22_Common.csv.dvc  states-to-index.csv.dvc  states.csv
dev/: user.clj
docker/: Dockerfile.loom  Dockerfile.notebook
docs/: antora.yml
dvc_plots/: index.html
inferenceql_auto_modeling/: cgpm.py  crosscat_plotting.py  grid_refinement.py  slice_sampling.py  train_baselines.py  utils.py
iql-viz/: index.html
jupyter/: consensus-clustering-based-on-cluster-assignments.ipynb  consensus-clustering-based-on-similiarity.ipynb  evaluation-aggregate-probability-error.ipynb  evaluation-individual-predictive-accuracy.ipynb  grid_refinement.ipynb  hyperhyperparameters_grid_vs_slice.ipynb  shift-probabilities.ipynb  utils.py
jupyter/.ipynb_checkpoints/: hyperhyperparameters_grid_vs_slice-checkpoint.ipynb
nix/: flake.nix
notebooks/: demo.adoc  ensure-grids-not-over-written.ipynb  manual-hyper-grid-refinement.ipynb  qc-deps.ipynb
pre_processing/: dta_to_csv.py  pyproject.toml
privacy/: README
privacy/scripts/: convert-files-to-binary  convert-to-binary  evaluate-classifier-roc  evaluate-classifier-statistics  make-predictions  rewrite
privacy/src/: predict.py
qc/templates/: fidelity.html  index.html
resources/: dependence_probability.json  dependence_probability_template.json  heatmap.json  marginal_fits.json  prob_vote_2016_query.json  prob_vote_2016_query_template.json  roc_plot.json
schemas/: cgpm.json
scripts/: ast_export.py  average_treatment_effect.py  cgpm_grow.py  cgpm_hydrate.py  cgpm_infer.py  cgpm_infer_refined.py  cgpm_refine_grid.py  cgpm_stream.py  cmi.py  compare_deps.py  correlation.py  create_column_models.py  create_model.py  dep_prob.py  discretize.py  dta_to_csv.py  evaluate-classifier-roc.py  evaluate-classifier-statistics.py  exploratory_analysis.py  exploratory_analysis_old.py  fidelity2json.py  guess_schema.sql  ignore.sh  inf_prog.py  interaction.py  interaction_old.py  linear_stats.py  loom_dump.py  loom_read.py  loom_sample.py  loom_to_json.py  make_pair_grid.py  make_pairplots.py  marginal_fit_metrics.py  minority_cohort.py  pairwise_qc.py  poststrat.py  pre_process.py  predict-v02.py  predict.py  (+16 more)
src/inferenceql/: auto.py  auto_modeling.py  convert_cgpm.py  utils.py
structure_learning/: baseline_models.py  best_model.py  create_column_models.py  dependence_probability.py  discretize.py  impute.py  io.py  loom.py  make_synthetic_categorical_data.py  make_synthetic_data.py  marginal_fits.py  prediction.py  preprocess.py  roc_plot.py  sample.py  sppl.py
test/: smoke-streaming.sh  smoke.sh  test_cgpm_wrapper.py  test_refine_grid.py  test_slice_sampling.py
tests/: test_inference_programming.py  test_io.py  test_make_models.py  test_smoke.py
(+179 files in other folders)
