[tool.poetry]
name = "structure_learning"
version = "0.1.0"
description = ""
authors = ["Zane Shelby <poetry@zane.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cgpm = {git = "https://github.com/probcomp/cgpm", branch = "zane/hardcode-version"}
dvc = "^3.13.3"
sppl = {git = "https://github.com/joaoloula/sppl", branch = "permissive_versions"}
edn-format = "^0.7.5"
jsonschema = "^4.19.0"
matplotlib = "^3.7.2"
catboost = "^1.2"
scikit-learn = "^1.3.0"
pytest = "^7.4.2"
dvc-s3= "^2.23"
StructureLearningAPI = {path = "../StructureLearningAPI", develop=true}
click = "^8.1.7"
polars = "^0.19.8"
setuptools = "^68.2.2"
duckdb = "^0.9.1"
pyarrow = "^13.0.0"
orjson = "^3.9.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
create-column-models = 'structure_learning.create_column_models:create_column_models'
preprocess = 'structure_learning.preprocess:preprocess'
loom_schema = 'structure_learning.preprocess:loom_schema'
loom_to_cgpm = 'structure_learning.loom:loom_to_cgpm'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"