[tool.poetry]
name = "structure_learning"
version = "0.1.0"
description = ""
authors = ["Zane Shelby <poetry@zane.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
cgpm = {path = "../cgpm", develop=true}
dvc = "^3.13.3"
sppl = {git = "https://github.com/joaoloula/sppl", branch = "permissive_versions"}
edn-format = "^0.7.5"
jsonschema = "^4.19.0"
matplotlib = "^3.7.2"
catboost = "^1.2"
scikit-learn = "^1.3.0"
pytest = "^7.4.2"
dvc-s3= "^2.23"
StructureLearningAPI = {path = "../StructureLearningAPI", develop=true}
click = "^8.1.7"
polars = "^0.19.8"
setuptools = "^68.2.2"
duckdb = "^0.9.1"
pyarrow = "^13.0.0"
orjson = "^3.9.8"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp311-cp311-linux_x86_64.whl", platform = "linux"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp311-none-macosx_11_0_arm64.whl", platform = "darwin"}
]
kaleido = "0.2.1"
sdv = {url = "https://files.pythonhosted.org/packages/bf/dc/584e1a86cb553fe4eb58cc04c35af7d37063491e670cc3b5872b8475afc2/sdv-1.4.0-py2.py3-none-any.whl"}
dacite = "^1.8.1"
black = "^23.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
create-column-models = 'structure_learning.create_column_models:create_column_models'
preprocess = 'structure_learning.preprocess:preprocess'
loom_schema = 'structure_learning.preprocess:loom_schema'
loom_to_cgpm = 'structure_learning.loom:loom_to_cgpm'
marginal_fits = 'structure_learning.marginal_fits:marginal_fits'
cgpm-sample = 'structure_learning.sample:sample_cgpm'
make-synthetic-data = 'structure_learning.make_synthetic_categorical_data:make_synthetic_categorical_data'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"