[tool.poetry]
name = "pre-processing"
version = "0.1.0"
description = ""
authors = ["joaoloula <jloula@mit.edu>"]
readme = "README.md"
packages = [{include = "pre_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
pyreadstat = "^1.2.2"
polars = "^0.18.13"
ipython = "^8.14.0"
ipdb = "^0.13.13"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
